# SciVis3DClass

./: .gitignore  CMakeLists.txt  main.cpp  superbuild.xml
Core/: CMakeLists.txt  CoreDefines.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  stagemanager.cpp  stagemanager.h  stagestate.cpp  stagestate.h  vtkscenewidget.cpp  vtkscenewidget.h
Libs/FortranTest/: CMakeLists.txt
Plugins/HelloWorld/: CMakeLists.txt  helloworldcontroller.cpp  helloworldcontroller.h  helloworldstate.cpp  helloworldstate.h
Plugins/ODE/: CMakeLists.txt  odecontroller.cpp  odecontroller.h  odeexamples.cpp  odeexamples.h  odeinterface.h  odesolver.cpp  odesolver.h  odestate.cpp  odestate.h  odeuidampedoscillator.cpp  odeuidampedoscillator.h  odeuidampedoscillator.ui  qtrc.qrc
Plugins/PDE1/: CMakeLists.txt  pde1state.cpp  pde1state.h
